--- a/admin_dashboard/templates/admin_dashboard/partials/add-product-form.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/add-product-form.html
@@ -258,6 +258,7 @@
             hx-delete="{% url 'delete-post-single' a_product_already_being_edited_id %}"
             hx-target=".table"
             hx-swap="outerHTML"
+            hx-confirm="Are you sure you want to delete product {{a_product_already_being_edited_id}}"
             class="btn"  style="background-color:brown" type="button">Delete</button>   
 
             <button
