fixed bug with image on see btn

--- a/admin_dashboard/templates/admin_dashboard/admin-base.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-base.html
@@ -73,5 +73,6 @@
   </div>
 
   <script src="{% static 'js/product-add-errors.js' %}"></script>
+  <script src="{% static 'js/product-image-modal.js' %}"></script>
 </body>
 </html>
