fixed toast error

--- a/admin_dashboard/templates/admin_dashboard/partials/cancel_toast.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/cancel_toast.html
@@ -1,8 +1,10 @@
-<div class="toast toast--{{ message.tags }}">
+<div 
+style="opacity: 0;"
+class="toast toast--{{ message.tags }}">
     {{ message }}
     <a 
     hx-target=".toast"
     hx-delete="{% url 'cancel-toast' %}"
     hx-swap="outerHTML"
-    style="color: white;font-weight:700;display:none;"> &#10005; </a>
+    style="color: white;font-weight:700;"> &#10005; </a>
 </div>
