--- a/admin_dashboard/templates/admin_dashboard/partials/product-lists.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/product-lists.html
@@ -310,7 +310,13 @@ hx-swap-oob="true"
     {% endfor %}
     <tr>
     <td style="display:flex; gap: var(--space-sm); align-items:center;">
-        <button class="btn" type="button">Save all</button>
+        <button 
+        class="btn" 
+        type="button"
+        hx-post="{% url 'save-products-to-db' %}"
+        hx-target="#product-listings-table"
+        hx-swap="outerHTML"  
+        >Save all</button>
     </td>
     <td><button 
         style="background-color:brown;" 
@@ -319,6 +325,7 @@ hx-swap-oob="true"
         hx-delete="{% url 'clear-all-products-from-list' %}"
         hx-target="#product-listings-table"
         hx-swap="outerHTML"
+
         >Clear All</button></td>
     <td></td>
     <td> </td>
