--- a/admin_dashboard/templates/admin_dashboard/partials/_product-lists.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/_product-lists.html
@@ -61,6 +61,8 @@ id="product-listings-table"
         hx-post="{% url 'save-products-to-db' %}"
         hx-target="#product-listings-table"
         hx-swap="outerHTML"       
+        hx-confirm="Are you sure you want to save all products to store?"
+
         >Save all</button>
     </td>
     <td><button style="background-color:brown;"
@@ -69,6 +71,7 @@ id="product-listings-table"
         hx-delete="{% url 'clear-all-products-from-list' %}"
         hx-target="#product-listings-table"
         hx-swap="outerHTML"
+        hx-confirm="Are you sure you want to clear all products from list ?"
         >Clear All</button></td>
     <td></td>
     <td> </td>
